--- a/index.html
+++ b/index.html
@@ -4,274 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fadhel Resume</title>
+    <title>Fadhel Resume | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="/styleHome.css" />
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <style>
-        body {
-            font-family: "Josefin Sans", sans-serif;
-            margin: 0;
-            color: #121481;
-        }
-
-        /* ========================================== */
-        .header {
-            position: fixed;
-            background-color: #9B3922;
-            margin: 25px;
-            padding: 10px;
-            border-radius: 24px;
-            cursor: pointer;
-        }
-
-        .headerimg1 {
-            width: 20px;
-            cursor: pointer;
-            transition: 0.5s ease-in-out;
-        }
-
-        .headerimg2 {
-            width: 20px;
-            cursor: pointer;
-            transition: 0.5s ease-in-out;
-            display: none;
-        }
-
-        .dark-mode .headerimg2 {
-            display:block;
-            z-index: 1;
-        }
-
-        .dark-mode .headerimg1 {
-            display: none;
-            z-index: -1;
-        }
-
-        /* ========================================== */
-        .Awal {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            place-content: center;
-            padding: 10%;
-            background-color: #FFEAE3;
-            height: 60vh;
-        }
-
-        .Awal img {
-            width: 350px;
-            border-radius: 100vh;
-            box-shadow: 10px 10px 5px -2px rgba(18, 20, 129, 0.16);
-            -webkit-box-shadow: 10px 10px 5px -2px rgba(18, 20, 129, 0.16);
-            -moz-box-shadow: 10px 10px 5px -2px rgba(18, 20, 129, 0.16);
-            transition: 0.5s;
-        }
-
-        .Awal img:hover {
-            width: 400px;
-        }
-
-        .Awal h1 {
-            width: 64%;
-            margin-left: 4%;
-            font-size: 4.5vh;
-            font-weight: 600;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isiCV {
-            display: flex;
-            flex-direction: column;
-            place-content: center;
-            align-items: center;
-            margin-top: 6%;
-        }
-
-        .isiCV h1 {
-            font-size: 8vh;
-            font-weight: 600;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isiProfile {
-            display: flex;
-            flex-direction: row;
-            place-content: center;
-        }
-
-        .isiProfile h2 {
-            font-weight: 600;
-            font-size: xx-large;
-            margin-left: -4.7%;
-            transition: 0.3s ease-in-out;
-        }
-
-        .isiProfile p {
-            width: 40%;
-            margin-left: 12.7%;
-            margin-top: 32px;
-            font-size: large;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isiPendidikan {
-            display: flex;
-            flex-direction: row;
-            place-content: center;
-        }
-
-        .isiPendidikan h2 {
-            font-weight: 600;
-            font-size: xx-large;
-            margin-left: 3%;
-            transition: 0.3s ease-in-out;
-        }
-
-        .isiPendidikan ul li {
-            width: 100%;
-            margin-left: 9%;
-            margin-top: 20px;
-            font-size: large;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isiPengalaman {
-            display: flex;
-            flex-direction: row;
-            place-content: center;
-        }
-
-        .isiPengalaman h2 {
-            font-weight: 600;
-            font-size: xx-large;
-            margin-left: -10%;
-            transition: 0.3s ease-in-out;
-        }
-
-        .isiPengalaman ul li {
-            width: 100%;
-            margin-left: 7.6%;
-            margin-top: 20px;
-            font-size: large;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isiSkill {
-            display: flex;
-            flex-direction: row;
-            place-content: center;
-        }
-
-        .isiSkill h2 {
-            font-weight: 600;
-            font-size: xx-large;
-            margin-left: -71%;
-            transition: 0.3s ease-in-out;
-        }
-
-        .isiSkill ul li {
-            width: 100%;
-            margin-left: 41.5%;
-            margin-top: 20px;
-            font-size: large;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .isikontak {
-            display: flex;
-            flex-direction: row;
-            place-content: center;
-        }
-
-        .isikontak h2 {
-            font-weight: 600;
-            font-size: xx-large;
-            margin-left: -103.3%;
-            transition: 0.3s ease-in-out;
-        }
-
-        .isikontak ul li {
-            width: 100%;
-            margin-left: 43.5%;
-            margin-top: 20px;
-            font-size: large;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .SebFooter {
-            border-bottom: 2px solid;
-            font-size: larger;
-            font-weight: 600;
-            width: 100%;
-            margin-top: 8%;
-            text-align: center;
-            transition: 0.3s ease-in-out;
-        }
-
-        /* ========================================== */
-        .sosmed {
-            text-align: center;
-            margin-bottom: 50px;
-            margin-top: 30px;
-        }
-
-        .sosmed a {
-            text-decoration: none;
-            padding-inline: 20px;
-            font-size: 1.5rem;
-            color: #121481;
-            transition: 0.3s ease-in-out;
-        }
-
-        .sosmed a:hover {
-            color: black;
-        }
-
-        /* ========================================== */
-        .dark-mode {
-            background-color: #0C0C0C;
-            color: #F2613F;
-        }
-
-        .dark-mode a {
-            color: #F2613F;
-        }
-
-        .dark-mode a:hover {
-            color: #481E14;
-        }
-        
-        .dark-mode .Awal {
-            background-color: #481E14;
-        }
-    </style>
 </head>
 
 <body>
     <div class="header">
-        <img class="headerimg1" onclick="toggleDarkMode()"
-            src="https://cdn-icons-png.freepik.com/256/7625/7625513.png?ga=GA1.1.157771793.1707484896&semt=ais_hybrid" />
-        <img class="headerimg2" onclick="toggleDarkMode()"
-            src="https://cdn-icons-png.freepik.com/256/979/979585.png?ga=GA1.1.157771793.1707484896&semt=ais_hybrid" />
+        <div class="buttonTheme">
+            <img class="headerimg1" onclick="toggleDarkMode()"
+                src="https://cdn-icons-png.freepik.com/256/7625/7625513.png?ga=GA1.1.157771793.1707484896&semt=ais_hybrid" />
+            <img class="headerimg2" onclick="toggleDarkMode()"
+                src="https://cdn-icons-png.freepik.com/256/979/979585.png?ga=GA1.1.157771793.1707484896&semt=ais_hybrid" />
+        </div>
+        <a onclick="smoothScroll('Awal')">
+            <h1>FadhelRaihan</h1>
+        </a>
+        <div class="buttonPage">
+            <a onclick="smoothScroll('isiCV')">
+                <h2>Tentang</h2>
+            </a>
+            <a onclick="smoothScroll('Kontak')">
+                <h2>Kontak</h2>
+            </a>
+        </div>
     </div>
-    <div class="Awal">
+    <div class="Awal" id="Awal">
         <img
             src="https://img.freepik.com/free-psd/3d-illustration-human-avatar-profile_23-2150671142.jpg?t=st=1714490202~exp=1714493802~hmac=85d0db3fd91ff9152a8ab143df7b477aebf1c9adbaf4cb6de25068bae9a88876&w=1060" />
         <h1>Halo! Nama saya Muhammad Fadhel Raihan.
             Saya seorang Mahasiswa Rekayasa Perangkat Lunak
             di Universitas Pendidikan Indonesia Bandung.</h1>
     </div>
-    <div class="isiCV">
+
+    <div class="isiCV" id="isiCV">
         <h1>Saya Fadhel.</h1>
         <div class="isiProfile">
             <h2>Profil</h2>
@@ -313,7 +83,7 @@
                 <li>WhatsApp - (+62)81324232156</li>
             </ul>
         </div>
-        <div class="SebFooter">
+        <div class="SebFooter" id="Kontak">
             <h2>Mari Kerja Sama :)</h2>
         </div>
         <div class="sosmed">
@@ -340,7 +110,17 @@
             if (darkModePref === 'true') {
                 document.body.classList.add('dark-mode');
             }
-        };
+        }
+
+        function smoothScroll(targetId) {
+            const targetElement = document.getElementById(targetId);
+            const targetPosition = targetElement.offsetTop;
+    
+            window.scrollTo({
+                top: targetPosition,
+                behavior: 'smooth'
+            });
+        }
     </script>
 </body>
 
